--- a/index.css
+++ b/index.css
@@ -155,6 +155,15 @@ td {
 	border: 0.4rem solid #fff;
 }
 
+a,
+a:link,
+a:visited,
+a:focus,
+a:hover,
+a:active {
+	color: #1b2d88;
+}
+
 .page {
 	padding: 1rem 1.5rem;
 }
@@ -196,7 +205,7 @@ td {
 
 /* Larger screens */
 
-@media all and (min-width: 30rem) {
+@media (min-width: 40rem) {
 	.page {
 		display: grid;
 		max-width: 100rem;
@@ -205,8 +214,16 @@ td {
 		grid-column-gap: 5rem;
 	}
 
-	.header--top,
-	.footer--end {
+	.header--top {
 		grid-column: 1 / -1;
+	}
+
+	.footer--end {
+		grid-column: 1 / 2;
+	}
+
+	.copy {
+		grid-column: 2 / -1;
+		padding-top: 4rem;
 	}
 }
