Replace Gulp with improved Webpack config

--- a/themes/habitat/assets/styles/plex-sans/_index.scss
+++ b/themes/habitat/assets/styles/plex-sans/_index.scss
@@ -1,4 +1,4 @@
-$font-prefix: '/fonts' !default;
+$font-prefix: '/assets/fonts' !default;
 
 // @import 'bold/index';
 // @import 'bold/italic/index';
