--- a/themes/habitat/layouts/partials/header.html
+++ b/themes/habitat/layouts/partials/header.html
@@ -1,6 +1,6 @@
 <header class="header">
 	<h1 class="header__logo">
-		<a href="/"><img src="/ui/logo.svg" alt="Das Habitat" width="207" height="80"></a>
+		<a href="/"><img src="/assets/ui/logo.svg" alt="Das Habitat" width="207" height="80"></a>
 	</h1>
 
 	<p class="header__claim">Nährboden für die&nbsp;Zukunft. <br>Deine offene Werkstatt.</p>
