--- a/themes/habitat/layouts/_default/baseof.html
+++ b/themes/habitat/layouts/_default/baseof.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>{{ .Params.Title  }}{{ if .Params.Title }} | {{ end }}{{ .Site.Title }}</title>
-		<link rel="stylesheet" href="/assets{{ if eq (getenv "APP_ENV") "dev" }}main.css{{ else }}{{ index .Site.Data.manifest "main.css" | relURL }}{{ end }}">
+		<link rel="stylesheet" href="/assets{{ if eq (getenv "APP_ENV") "dev" }}/main.css{{ else }}{{ index .Site.Data.manifest "main.css" | relURL }}{{ end }}">
 
 		{{ if(.Params.meta_keywords) }}
 			<meta name="keywords" content="{{ delimit .Params.meta_keywords ", " }}">
@@ -39,6 +39,6 @@
 			{{- block "after-page" . }}{{- end }}
 			{{- partial "footer.html" . -}}
 		</div>
-		<script type="text/javascript" src="/assets{{ if eq (getenv "APP_ENV") "dev" }}main.js{{ else }}{{ index .Site.Data.manifest "main.js" | relURL }}{{ end }}"></script>
+		<script type="text/javascript" src="/assets{{ if eq (getenv "APP_ENV") "dev" }}/main.js{{ else }}{{ index .Site.Data.manifest "main.js" | relURL }}{{ end }}"></script>
 	</body>
 </html>
