--- a/themes/habitat/assets/styles/partials/_header.scss
+++ b/themes/habitat/assets/styles/partials/_header.scss
@@ -27,8 +27,13 @@
 	color: mix($color-brand-gray, #fff, 50%);
 }
 
-.header__nav {
+.header__nav,
+.header__subnav {
 	> a + a {
 		margin-left: $offset-horizontal;
 	}
+}
+
+.header__subnav {
+	margin-top: 2rem;
 }
