--- a/themes/habitat/layouts/index.html
+++ b/themes/habitat/layouts/index.html
@@ -32,7 +32,12 @@
 			86157 Augsburg
 		</p>
 
-		<p>In den ehemaligen Räumen der Jungen&nbsp;Werkstatt.</p>
+		<p>In den Räumen der Jungen&nbsp;Werkstatt.</p>
+
+		<h2>Kontakt</h2>
+		<p>
+			<a href="mailto:kontakt@das-habitat.de">kontakt@das-habitat.de</a>
+		</p>
 
 		<h2>Anderswo</h2>
 
