--- a/themes/habitat/assets/styles/index.scss
+++ b/themes/habitat/assets/styles/index.scss
@@ -13,6 +13,7 @@
 @import 'typography';
 
 // Partials
+@import 'partials/breadcrumbs';
 @import 'partials/footer';
 @import 'partials/header';
 @import 'partials/statement';
