--- a/themes/habitat/layouts/partials/footer.html
+++ b/themes/habitat/layouts/partials/footer.html
@@ -1,7 +1,9 @@
 <footer class="footer">
+	{{ partial "breadcrumbs.html" . }}
+
 	<div>
 		<p>
-			&copy; 2018–2019 Das Habitat Augsburg e.V.
+			&copy; 2018–2019 Das Habitat Augsburg e.V. <a href="mailto:kontakt@das-habitat.de">kontakt@das-habitat.de</a>
 		</p>
 
 		<nav>
