Nutzer-Tracking mit Opt-Out und Datenschutztext

--- a/themes/habitat/layouts/partials/footer.html
+++ b/themes/habitat/layouts/partials/footer.html
@@ -7,7 +7,7 @@
 		</p>
 
 		<nav>
-			<a href="/impressum/">Impressum</a>
+			<a href="/impressum/">Impressum</a> <a href="/datenschutz/">Datenschutz</a>
 		</nav>
 	</div>
 </footer>
