--- a/themes/habitat/layouts/_default/baseof.html
+++ b/themes/habitat/layouts/_default/baseof.html
@@ -5,9 +5,9 @@
 		<title>{{ .Params.Title  }}{{ if .Params.Title }} | {{ end }}{{ .Site.Title }}</title>
 		<link rel="stylesheet" href="/assets{{ if eq (getenv "APP_ENV") "dev" }}/main.css{{ else }}{{ index .Site.Data.manifest "main.css" | relURL }}{{ end }}">
 
-		{{ if(.Params.meta_keywords) }}
+		{{- if(.Params.meta_keywords) -}}
 			<meta name="keywords" content="{{ delimit .Params.meta_keywords ", " }}">
-		{{- end }}
+		{{- end -}}
 		<meta name="description" content="{{ .Params.meta_description }}">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta property="og:site_name" content="{{ .Site.Title }}">
@@ -24,6 +24,10 @@
 		{{- if .Params.meta_image -}}
 			<meta name="twitter:image" content="{{ .Params.meta_image }}">
 		{{- end -}}
+
+		{{ if not (eq (getenv "APP_ENV") "dev") }}
+		<script type="text/javascript">var _paq = window._paq || []; _paq.push(['trackPageView']); _paq.push(['enableLinkTracking']); (function() { var u="https://statistik.das-habitat.de/"; _paq.push(['setTrackerUrl', u+'matomo.php']); _paq.push(['setSiteId', '1']); var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0]; g.type='text/javascript'; g.async=true; g.defer=true; g.src=u+'matomo.js'; s.parentNode.insertBefore(g,s); })();</script>
+		{{- end }}
 	</head>
 	<body>
 		<div class="site">
@@ -40,5 +44,8 @@
 			{{- partial "footer.html" . -}}
 		</div>
 		<script type="text/javascript" src="/assets{{ if eq (getenv "APP_ENV") "dev" }}/main.js{{ else }}{{ index .Site.Data.manifest "main.js" | relURL }}{{ end }}"></script>
+		{{ if not (eq (getenv "APP_ENV") "dev") }}
+		<noscript><img src="https://statistik.das-habitat.de/matomo.php?idsite=1&amp;rec=1" style="border:0;" alt="" /></noscript>
+		{{- end }}
 	</body>
 </html>
