--- a/themes/habitat/assets/styles/_config.scss
+++ b/themes/habitat/assets/styles/_config.scss
@@ -30,8 +30,7 @@ $breakpoint-l: 880px;
 }
 
 $grid-columns: var(--grid-colums);
-$grid-column-gap: vaR(--grid-column-gap);
+$grid-column-gap: var(--grid-column-gap);
 $inner-grid-columns: var(--inner-grid-columns);
 
-$offset-horizontal: 3rem;
 $offset-vertical: var(--offset-vertical);
