--- a/themes/habitat/assets/styles/partials/_header.scss
+++ b/themes/habitat/assets/styles/partials/_header.scss
@@ -36,8 +36,25 @@
 	align-self: center;
 	justify-self: right;
 
+	> ul {
+		&,
+		> li {
+			margin: 0;
+			padding: 0;
+			display: inline-block;
+			list-style: none;
+		}
+
+		> li + li {
+			margin-left: $offset-vertical;
+		}
+
+		ul {
+			position: absolute;
+		}
+	}
+
 	a + a {
-		margin-left: $grid-column-gap;
 	}
 }
 
