--- a/themes/habitat/layouts/partials/contact.html
+++ b/themes/habitat/layouts/partials/contact.html
@@ -1,12 +1,13 @@
 <div class="contact {{ .className }}">
+	<h3 class="aux">Öffnungszeiten</h3>
 	<p>
-		Freitag &amp; Samstag 15&ndash;21:00 Uhr<br>
-		Sonntags 11&ndash;17:00 Uhr
+		Freitag &amp; Samstag: 15&ndash;21:00 Uhr<br>
+		Sonntags: 11&ndash;17:00 Uhr
 	</p>
 
 	<p>
 		Das Habitat Augsburg e.V.<br>
-		Eberlestraße 27<br>
+		Eberlestraße 27, Gebäude D1<br>
 		86157 Augsburg
 	</p>
 	<p>
