--- a/themes/habitat/layouts/index.html
+++ b/themes/habitat/layouts/index.html
@@ -1,7 +1,7 @@
 {{- define "before-page" }}
 	{{ partial "contact.html" (dict "context" . "class" "t-home__contact")  }}
 
-	<div class="statement">
+	<div class="statement t-home__statement">
 		<blockquote>
 			<p>{{ htmlUnescape .Params.statement }}</p>
 		</blockquote>
@@ -9,34 +9,12 @@
 {{- end }}
 
 {{- define "main" }}
+	<a id="workshops"></a>
 	{{ .Content }}
 {{- end }}
 
 {{- define "after-main" }}
 	<aside class="sidebar">
-		<h2>Öffnungszeiten</h2>
-
-		<dl>
-			<dt>Freitag &amp; Samstag</dt>
-			<dd>15 bis 21 Uhr</dd>
-
-			<dt>Sonntag</dt>
-			<dd>11 bis 17 Uhr</dd>
-		</dl>
-
-		<h2>Anfahrt</h2>
-
-		<p>
-			Eberlestraße 29<br />
-			Gebäude D1 (ehemals B)<br />
-			86157 Augsburg
-		</p>
-
-		<h2>Kontakt</h2>
-		<p>
-			<a href="mailto:kontakt@das-habitat.de">kontakt@das-habitat.de</a>
-		</p>
-
 		<h2>Anderswo</h2>
 
 		<ul>
