--- a/themes/habitat/assets/styles/_global.scss
+++ b/themes/habitat/assets/styles/_global.scss
@@ -8,7 +8,8 @@ body,
 html,
 body {
 	background: $color-brand-white;
-	color: $color-brand-gray;
+	color: $color-brand-black;
+	font-weight: 500;
 }
 
 html {
@@ -17,52 +18,19 @@ html {
 
 body {
 	font-size: 1.5rem;
-	line-height: 1.6;
+	line-height: calc(25 / 15);
 }
 
-.page {
-	@include container;
+.site {
+	display: grid;
+	grid-template-columns: $grid-columns;
+	grid-column-gap: $grid-column-gap;
 
-	main {
-		max-width: 60rem;
-		margin-bottom: 5rem;
-	}
-
-	@media (min-width: 70rem) {
-		display: flex;
-	}
-}
-
-.sidebar {
-	display: block;
-	flex: 1 0 auto;
-
-	@media (min-width: 70rem) {
-		width: 30rem;
-		margin-left: $offset-horizontal * 3;
+	> * {
+		grid-column: 2 / -2;
 	}
 }
 
 a {
-	&,
-	&:link,
-	&:visited {
-		margin: 0 -0.3rem;
-		padding: 0 0.3rem;
-		color: $color-brand-blue;
-		text-decoration: none;
-		font-weight: 600;
-		box-shadow: inset 0 -0.3rem 0 0 transparentize($color-brand-blue, 0.8),
-			0 0 0 0 transparentize($color-brand-blue, 0.8);
-		transition: box-shadow 0.1s ease-in;
-	}
-
-	&:focus,
-	&:hover,
-	&.active {
-		color: $color-brand-blueAlt;
-		box-shadow: inset 0 -0.7rem 0 0 transparentize($color-brand-blue, 0.8),
-			0 0.3rem 0 0 transparentize($color-brand-blue, 0.8);
-		transition: box-shadow 0.2s ease-out;
-	}
+	@include link;
 }
