--- a/themes/habitat/assets/styles/_typography.scss
+++ b/themes/habitat/assets/styles/_typography.scss
@@ -5,7 +5,7 @@ h4,
 h5,
 h6 {
 	margin: 0;
-	font-weight: 500;
+	font-weight: 700;
 	color: $color-brand-black;
 }
 
@@ -44,7 +44,7 @@ h2,
 h3,
 .h3 {
 	font-size: inherit;
-	font-weight: 600;
+	font-weight: 700;
 	text-transform: uppercase;
 	margin-bottom: 1rem;
 
@@ -55,7 +55,8 @@ h3,
 
 li,
 dt,
-dd {
+dd,
+blockquote {
 	margin: 0;
 	padding: 0;
 }
