--- a/themes/habitat/assets/styles/partials/_footer.scss
+++ b/themes/habitat/assets/styles/partials/_footer.scss
@@ -1,18 +1,3 @@
 .footer {
-	margin: 10rem 0 0;
-	padding-top: 3rem;
-	padding-bottom: 10rem;
-
-	background: mix($color-brand-pale, #fff, 30%);
-
-	> div {
-		@include container;
-
-		display: flex;
-		justify-content: space-between;
-	}
-
-	p + nav {
-		margin-top: 0;
-	}
+	background: mix($color-brand-pale, $color-brand-white, 20%);
 }
