--- a/themes/habitat/layouts/index.html
+++ b/themes/habitat/layouts/index.html
@@ -9,8 +9,9 @@
 {{- end }}
 
 {{- define "main" }}
-	<a id="workshops"></a>
-	{{ .Content }}
+	<main class="main main--grid">
+		{{ .Content }}
+	</main>
 {{- end }}
 
 {{- define "after-main" }}
