--- a/themes/habitat/assets/styles/plex-sans/semibold/_index.scss
+++ b/themes/habitat/assets/styles/plex-sans/semibold/_index.scss
@@ -1,16 +1,16 @@
-$font-prefix: ".." !default;
-@font-face {
-	font-family: "IBM Plex Sans Web";
-	font-style: normal;
-	font-weight: 600;
-	src: local("IBM Plex Sans SemiBold"), local("IBMPlexSans-SemiBold"),
-		url("#{$font-prefix}/IBM-Plex-Sans/fonts/complete/woff2/IBMPlexSans-SemiBold.woff2") format("woff2"),
-		url("#{$font-prefix}/IBM-Plex-Sans/fonts/complete/woff/IBMPlexSans-SemiBold.woff") format("woff");
-}
+$font-prefix: '..' !default;
+// @font-face {
+// 	font-family: "IBM Plex Sans Web";
+// 	font-style: normal;
+// 	font-weight: 600;
+// 	src: local("IBM Plex Sans SemiBold"), local("IBMPlexSans-SemiBold"),
+// 		url("#{$font-prefix}/IBM-Plex-Sans/fonts/complete/woff2/IBMPlexSans-SemiBold.woff2") format("woff2"),
+// 		url("#{$font-prefix}/IBM-Plex-Sans/fonts/complete/woff/IBMPlexSans-SemiBold.woff") format("woff");
+// }
 
-@import "cyrillic";
-@import "pi";
-@import "latin3";
-@import "latin2";
-@import "latin1";
-@import "greek";
+@import 'cyrillic';
+@import 'pi';
+@import 'latin3';
+@import 'latin2';
+@import 'latin1';
+@import 'greek';
