Prefer font subsets

--- a/themes/habitat/assets/styles/plex-sans/_index.scss
+++ b/themes/habitat/assets/styles/plex-sans/_index.scss
@@ -8,11 +8,11 @@ $font-prefix: '/assets/fonts' !default;
 // @import 'light/index';
 // @import 'light/italic/index';
 @import 'medium/index';
-// @import 'medium/italic/index';
-@import 'regular/index';
+@import 'medium/italic/index';
+// @import 'regular/index';
 @import 'semibold/index';
-// @import 'semibold/italic/index';
-// @import 'text/index';
-// @import 'text/italic/index';
+@import 'semibold/italic/index';
+@import 'text/index';
+@import 'text/italic/index';
 // @import 'thin/index';
 // @import 'thin/italic/index';
