--- a/themes/habitat/assets/styles/_global.scss
+++ b/themes/habitat/assets/styles/_global.scss
@@ -42,3 +42,15 @@ body {
 a {
 	@include link;
 }
+
+figure {
+	display: block;
+	margin: 0;
+	padding: 0;
+
+	img {
+		display: block;
+		max-width: 100%;
+		height: auto;
+	}
+}
