--- a/themes/habitat/assets/styles/mixins/_box.scss
+++ b/themes/habitat/assets/styles/mixins/_box.scss
@@ -2,7 +2,7 @@
 	--tint: rgba(0, 0, 0, 0);
 
 	padding: 2rem 2.4rem;
-	background-color: var(--tint);
+	background: var(--tint);
 	// prettier-ignore
 	box-shadow:
 		0 0 2px 0 transparentize($color-brand-gray, 0.9),
@@ -10,6 +10,7 @@
 		0 3px 8px -3px transparentize($color-brand-gray, 0.77),
 		0 7px 30px -5px transparentize($color-brand-gray, 0.77),
 		0 0 90px -45px var(--tint);
+
 	@include media-l {
 		padding: 2.4rem 3.2rem;
 	}
