--- a/themes/habitat/layouts/partials/contact.html
+++ b/themes/habitat/layouts/partials/contact.html
@@ -1,4 +1,4 @@
-<div class="contact {{ .className }}">
+<div class="contact {{ .class }}">
 	<h3 class="aux">Öffnungszeiten</h3>
 	<p>
 		Freitag &amp; Samstag: 15&ndash;21:00 Uhr<br>
