--- a/themes/habitat/assets/styles/index.scss
+++ b/themes/habitat/assets/styles/index.scss
@@ -20,9 +20,13 @@
 @import 'grid';
 
 // Partials
+@import 'partials/contact';
+@import 'partials/feature';
 @import 'partials/footer';
 @import 'partials/header';
-@import 'partials/contact';
+@import 'partials/page';
+@import 'partials/sidebar';
+@import 'partials/stage';
 @import 'partials/statement';
 
 // Templates
